--- a/internship.html
+++ b/internship.html
@@ -41,6 +41,18 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/CuriocityGroupInc/743999687874339-video-host-intern'>Curiocity Group Inc. Video Host Intern | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/CuriocityGroupInc/743999688699159-video-host-intern'>Curiocity Group Inc. Video Host Intern | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/CuriocityGroupInc/743999688699288-video-host-intern'>Curiocity Group Inc. Video Host Intern | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/bankerstoolbox/job/ocJDafws'>Abrigo Careers - Marketing Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
@@ -97,7 +109,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sandemansneweurope.recruitee.com/o/business-development-internship-map-advertising'>
+<h5><a href='https://sandemansneweurope.recruitee.com/o/business-development-internship-map-advertising'>
       Business Development Internship (Map Advertising) - SANDEMANs NEW Europe 
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -121,7 +133,7 @@
 <p><span class="badge badge-light">Boston Boston</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/andela/jobs/1794389'>Job Application for Product Design Intern at Andela</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/andela/jobs/1794389'>Job Application for Product Design Intern at Andela</a></h5> 
 <p><span class="badge badge-light">Lagos, Nigeria</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -131,7 +143,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://tmmc.recruiterbox.com/jobs/fk0jw58'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://tmmc.recruiterbox.com/jobs/fk0jw58'>
     Marine Mammal Rescue and Response Intern - Monterey Bay Operations at The Marine Mammal Center
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -161,7 +173,7 @@
 <p><span class="badge badge-light">Washington, District of Columbia</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://activision.referrals.selectminds.com/jobs/business-intelligence-intern-4033'>Business Intelligence Intern -  Activision Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://activision.referrals.selectminds.com/jobs/business-intelligence-intern-4033'>Business Intelligence Intern -  Activision Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -187,7 +199,7 @@ quality?...</p>
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qWGaVfwr&k=Job&j=o4vn9fwP&__jvst=Employee+Referral&__jvsd=sMkFeiwM&__jvsc=Twitter&bid=ntAYVLwc'>Selina Careers - Hospitality Operations (Internship Opportunity)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qWGaVfwr&k=Job&j=o4vn9fwP&__jvst=Employee+Referral&__jvsd=sMkFeiwM&__jvsc=Twitter&bid=ntAYVLwc'>Selina Careers - Hospitality Operations (Internship Opportunity)</a></h5> 
 <p><span class="badge badge-light">Mexico</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
@@ -303,7 +315,7 @@ quality?...</p>
 <p><span class="badge badge-light">Vienna Vienna</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://codal.applytojob.com/apply/ycpxZC/UX-Internship'>UX Internship - Codal - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://codal.applytojob.com/apply/ycpxZC/UX-Internship'>UX Internship - Codal - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -317,7 +329,7 @@ quality?...</p>
 <p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://vandebron.recruitee.com/o/solar-panel-integration-engineer-internship'>
+<h5><a href='https://vandebron.recruitee.com/o/solar-panel-integration-engineer-internship'>
       Solar panel integration engineer (internship) - Vandebron
     </a></h5> 
 <p><span class="badge badge-light">Amsterdam</span></p>
@@ -339,7 +351,7 @@ quality?...</p>
 <p><span class="badge badge-light">Paris France</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692223712-professional-internship-security-software-engineer-m-f-'>Bosch Group Professional Internship: Security Software Engineer (M/F) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692223712-professional-internship-security-software-engineer-m-f-'>Bosch Group Professional Internship: Security Software Engineer (M/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -347,7 +359,7 @@ quality?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/bankerstoolbox/job/ocJDafws'>Abrigo Careers - Marketing Intern</a></h5> 
+<h5><a href='https://jobs.jobvite.com/bankerstoolbox/job/ocJDafws'>Abrigo Careers - Marketing Intern</a></h5> 
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -385,7 +397,7 @@ quality?...</p>
 Employer Branding (m/f/d) in Berlin (published: 23.07.2019). Apply now or check 
 the?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://advertima.join.com/jobs/267060-internship-computer-vision-data-collection'>Job @ Advertima (St. Gallen): Internship Computer ... | JOIN</a></h5> 
+<h5><a href='https://advertima.join.com/jobs/267060-internship-computer-vision-data-collection'>Job @ Advertima (St. Gallen): Internship Computer ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Interested in this job? Join us! avatar. Contact Person: Nadja Kaderli. People & 
 Culture Manager. Documents: .doc, .docx, .pdf, .rtf, .odt, .txt. CV. Other Documents
@@ -451,20 +463,6 @@ Rocket Internet) in Berlin (published: 19.03.2019). Apply now or check the?...</
 <hr/>
 <h5><a href='https://jobs.jobvite.com/nycedc/job/ovyCafwz'>NYCEDC Careers - Intern - Partnerships</a></h5> 
 <p><span class="badge badge-light">New York New York</span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://stantec.referrals.selectminds.com/jobs/engineering-planning-intern-5999'>Engineering/Planning Intern - Stantec Careers</a></h5> 
-<p><span class="badge badge-light">California, United States</span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://stantec.referrals.selectminds.com/jobs/engineering-intern-transportation-6006'>Engineering Intern, Transportation - Stantec Careers</a></h5> 
-<p><span class="badge badge-light">Ottawa, Ontario</span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://temicongmbh.recruitee.com/l/en/o/praktikant-mwd-im-bereich-controlling'>
-      Intern in the field of controlling (m/f/d) - temicon GmbH
-    </a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 
